# doQment-ai

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: post-git-commit.sh
docs/: dev-history.md
doqment/: __init__.py  __main__.py  aggregator.py  chunker.py  cli.py  processor.py  renderer.py  transcript.py  web.py
prompts/: extract_notes.txt
static/: index.html
